--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Inter:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="./assets/password_FILL0_wght400_GRAD0_opsz24.svg" type="image/x-icon">
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Gerador de Senha</title>
